@@ -1,6 +1,8 @@
 
 package net.mcreator.paralelum.world.biome;
 
+import net.minecraftforge.registries.ForgeRegistries;
+
 import net.minecraft.world.level.levelgen.placement.SurfaceWaterDepthFilter;
 import net.minecraft.world.level.levelgen.placement.InSquarePlacement;
 import net.minecraft.world.level.levelgen.placement.CountPlacement;
@@ -20,40 +22,27 @@ import net.minecraft.world.level.biome.Biome;
 import net.minecraft.world.entity.MobCategory;
 import net.minecraft.world.entity.EntityType;
 import net.minecraft.util.valueproviders.ConstantInt;
-import net.minecraft.sounds.SoundEvent;
 import net.minecraft.sounds.Music;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.data.worldgen.placement.PlacementUtils;
 import net.minecraft.data.worldgen.features.FeatureUtils;
 import net.minecraft.data.worldgen.BiomeDefaultFeatures;
 
-import net.mcreator.paralelum.world.features.treedecorators.BloodForestTrunkDecorator;
-import net.mcreator.paralelum.world.features.treedecorators.BloodForestLeaveDecorator;
-import net.mcreator.paralelum.world.features.treedecorators.BloodForestFruitDecorator;
 import net.mcreator.paralelum.init.ParalelumModBlocks;
 
 import java.util.List;
 
-import com.google.common.collect.ImmutableList;
-
 public class BloodForestBiome {
 	public static Biome createBiome() {
-		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-52429).waterColor(-6750208).waterFogColor(-6750208).skyColor(-52429)
-				.foliageColorOverride(-65536).grassColorOverride(-65536)
-				.backgroundMusic(new Music(new SoundEvent(new ResourceLocation("music.nether.crimson_forest")), 12000, 24000, true)).build();
+		BiomeSpecialEffects effects = new BiomeSpecialEffects.Builder().fogColor(-52429).waterColor(-6750208).waterFogColor(-6750208).skyColor(-52429).foliageColorOverride(-65536).grassColorOverride(-65536)
+				.backgroundMusic(new Music(ForgeRegistries.SOUND_EVENTS.getValue(new ResourceLocation("music.nether.crimson_forest")), 12000, 24000, true)).build();
 		BiomeGenerationSettings.Builder biomeGenerationSettings = new BiomeGenerationSettings.Builder();
 		biomeGenerationSettings.addFeature(GenerationStep.Decoration.VEGETAL_DECORATION,
-				PlacementUtils.register("paralelum:tree_blood_forest", FeatureUtils.register("paralelum:tree_blood_forest", Feature.TREE,
-						new TreeConfiguration.TreeConfigurationBuilder(
-								BlockStateProvider.simple(ParalelumModBlocks.BLOOD_LOG.get().defaultBlockState()), new StraightTrunkPlacer(7, 2, 0),
-								BlockStateProvider.simple(ParalelumModBlocks.BLOOD_LEAVES.get().defaultBlockState()),
-								new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1))
-								.decorators(ImmutableList.of(BloodForestLeaveDecorator.INSTANCE, BloodForestTrunkDecorator.INSTANCE,
-										BloodForestFruitDecorator.INSTANCE))
-								.build()),
-						List.of(CountPlacement.of(2), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0),
-								PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING),
-								BiomeFilter.biome())));
+				PlacementUtils.register("paralelum:tree_blood_forest",
+						FeatureUtils.register("paralelum:tree_blood_forest", Feature.TREE,
+								new TreeConfiguration.TreeConfigurationBuilder(BlockStateProvider.simple(ParalelumModBlocks.BLOOD_LOG.get().defaultBlockState()), new StraightTrunkPlacer(7, 2, 0),
+										BlockStateProvider.simple(ParalelumModBlocks.BLOOD_LEAVES.get().defaultBlockState()), new BlobFoliagePlacer(ConstantInt.of(2), ConstantInt.of(0), 3), new TwoLayersFeatureSize(1, 0, 1)).ignoreVines().build()),
+						List.of(CountPlacement.of(2), InSquarePlacement.spread(), SurfaceWaterDepthFilter.forMaxDepth(0), PlacementUtils.HEIGHTMAP_OCEAN_FLOOR, PlacementUtils.filteredByBlockSurvival(Blocks.OAK_SAPLING), BiomeFilter.biome())));
 		BiomeDefaultFeatures.addDefaultCarversAndLakes(biomeGenerationSettings);
 		BiomeDefaultFeatures.addDefaultOres(biomeGenerationSettings);
 		BiomeDefaultFeatures.addFossilDecoration(biomeGenerationSettings);
@@ -63,7 +52,6 @@ public class BloodForestBiome {
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.FOX, 20, 4, 4));
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.HOGLIN, 20, 4, 4));
 		mobSpawnInfo.addSpawn(MobCategory.MONSTER, new MobSpawnSettings.SpawnerData(EntityType.PHANTOM, 20, 4, 4));
-		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects)
-				.mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
+		return new Biome.BiomeBuilder().precipitation(Biome.Precipitation.RAIN).temperature(0.5f).downfall(0.5f).specialEffects(effects).mobSpawnSettings(mobSpawnInfo.build()).generationSettings(biomeGenerationSettings.build()).build();
 	}
 }
